# CareVoiceAI

./: .gitignore  API_CONTRACT.md  APP_FEATURES_AND_FLOWS.md  CODABLE_MODELS.md  IOS_SCREEN_MAP.md  Makefile  README.md  TESTING.md  THONG_BAO_MIEN_PHI.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: base.py  extra_demo_patients.py  init_db.py  production_accounts.py  session.py
backend/app/integrations/: vnpt.py
backend/app/middleware/: rate_limit.py  request_context.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/repositories/: base.py  idempotency.py  jobs.py  patients.py  users.py
backend/app/schemas/: __init__.py  adherence.py  auth.py  checkins.py  common.py  daily_tip.py  devices.py  hotline.py  ocr.py  patients.py  staff.py
backend/app/services/: auth.py  caregiver_alerts.py  staff.py  (+16 more)
backend/migrations/: README.md  env.py
backend/scripts/: generate_sample_prescription.py  migrate_patient_codes.py  patient_flow_test.sh  print_api_url.sh  production_ocr_test.sh  smoke_test_localhost.sh  start_local.sh  vnpt_live_check.py  vnpt_sample_wav_demo.py
backend/test/: README.md
backend/tests/: conftest.py  paths.py  test_api_contract.py  test_background_jobs.py  test_health_state.py  test_patient_validation.py  test_risk_classifier.py  test_smartbot_sse.py  test_storage_limits.py  test_vnpt_stt.py  test_voice_analysis.py
(+156 files in other folders)
