[project]
name = "carevoice-backend"
version = "0.1.0"
description = "Production-ready REST API backend for the CareVoice AI iOS app."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.117.0",
  "uvicorn[standard]>=0.30.0,<0.36.0",
  "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
  "aiosqlite>=0.20.0,<0.22.0",
  "asyncpg>=0.29.0,<0.31.0",
  "alembic>=1.13.0,<1.18.0",
  "pydantic-settings>=2.3.0,<2.12.0",
  "python-multipart>=0.0.9,<0.0.21",
  "PyJWT>=2.8.0,<2.11.0",
  "orjson>=3.10.0,<3.12.0",
  "structlog>=24.1.0,<26.0.0",
  "httpx>=0.27.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.3.0",
  "ruff>=0.5.0,<0.14.0",
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
